Fix carb pattern visibility between customer reviews and products sections

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -819,7 +819,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 3;
     pointer-events: none;
     transform: rotate(180deg);
 }
@@ -1109,8 +1109,8 @@
     position: relative;
     overflow: visible;
     z-index: 1;
-    margin-top: -150px;
-    padding-top: 150px;
+    margin-top: -200px;
+    padding-top: 200px;
 }
 
 .products-section.gradiant-background {
@@ -1122,7 +1122,7 @@
 .products-curved-top::before {
     display: block;
     content: '';
-    height: 150px;
+    height: 200px;
     width: 100%;
     background: url(../images/carb.png) bottom no-repeat;
     background-size: 100% 100%;
